[package]
name = "shoddy_sha"
version = "0.1.0"
authors = ["David Wagner <mnem@noiseandheat.com>"]
edition = "2018"

[dependencies]
primal = "0.3.0"
sha2 = "0.9.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#bitstring = "0.1.1"
